stylesheets/stylesheet.css
/* PAGE HEADER */

.page-header {
    color: #fff;
    text-align: center;
}

.page-header {
    padding: 3rem 4rem;
}

/* PROJECT NAME */

.project-name {
    font-weight: 100;
}


/* TAGLINE */

.project-tagline-wrapper {
    background-color: white;
    padding: 2rem 2rem;
    margin-bottom: 2rem;
}

.project-tagline {
    font-weight: 100;
    text-align: center;
    font-size: 2.28rem;
}


/* CONTAINER */

.container {
    max-width: 900px;
}


/* CARDS */

.card .card-content {
    padding: 4px 20px 10px 20px;
}


/* Footer */

html {
    position: relative;
    min-height: 100%;
}

body {
    padding-bottom: 60px;
}

.footer {
    position: absolute;
    height: 52px;
    bottom: 0;
    width: 100%;
    padding-top: 15px;
    padding-bottom: 15px;
}

